2011-07-07  Romain Francois  <romain@r-enthusiasts.com>

    * inst/include/Rcpp/XPtr.h: The XPtr class template gains a second template
    parameter allowing the developper to supply his/her own finalizer instead
    of the default one that calls delete

2011-07-05  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.5
        * inst/NEWS: Release 0.9.5
        * inst/include/Rcpp/config.h: Release 0.9.5
        * debian/*: Similarly updated for new release to Debian

2011-07-02  Dirk Eddelbuettel  <edd@debian.org>

	* cleanup: Also clean in examples/OpenMP/

2011-06-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/skeleton/zzz.R (.onLoad): Force load of methods package before
	calling loadRcppModules() to make 'R CMD check' happier

2011-06-06  Romain Francois  <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/Vector.h : init becomes protected to fix the bug
	reported by Doug Bates on Rcpp-devel.

2011-05-31  Romain Francois  <romain@r-enthusiasts.com>

	* R/loadRcppModules.R: New argument "direct" in loadRcppModules

	* R/tools.R: New unexported function forceAssignInNamespace

2011-05-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/stats/random/rlnorm.h: Repaired accidental header
	guard from 'norm' to 'lnorm' so that the file really gets included,
	make several calls to standard library 'exp()' explicit as '::exp()'
	and fixed a cut-and-paste typo

2011-05-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/internal/wrap.h: For arguments of type const char *,
	wrap now checks for NULL arguments before calling Rf_mkString()
	* unitTests/runit.wrap.R: Added unit test for this

2011-05-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-quickref/Rcpp-quickref.Rnw: Corrected an error in STL
	example and added two more STL examples

2011-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/OpenMP/piWithInterrupts.cpp: Beginnings of new
	contributed example on OpenMP as well as user interrupt handling
